Fri Nov 28 17:37:36 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Manipulator.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Manipulator.cpp:
          Linux/gcc build errors/warnings.

Fri Nov 28 16:52:43 2003  Dale Wilson  <wilson_d@ociweb.com>

        * tao/IORManipulation/IORManipulation.h:
        * tao/IORManipulation/IORManipulation.cpp:
          Use meaningful argument names to reduce confusion.
          Add comment warning about inconsistent argument order.

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Manipulator.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Manipulator.cpp:
          New files factor out IOGR creation and manipulation
          from PG_Object_Group and PG_ObjectGroupManager

        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          IOGR stuff factored out.

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:


        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Support.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Support.cpp:
          Fuzz from last checkin.


Fri Nov 28 11:36:06 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/tests/FT_App/demo.pl:
          Rename this to be....
        * orbsvcs/tests/FT_App/run_test_demo.pl:
          ...new name.  It's still a "full" test.

        * orbsvcs/orbsvcs/PortableGroup/PG_Typeid_Properties_Map.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Typeid_Properties_Map.cpp:
          Rename these to be PG_Properties_Support.*

        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Support.h: