@@ -1,3 +1,9 @@
+Fri Nov 28 18:04:32 2003  Dale Wilson  <wilson_d@ociweb.com>
+
+        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.h:
+        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.cpp:
+          Linux/gcc build errors/warnings.
+
 Fri Nov 28 17:37:36 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
